CameraBin: Postpone fetching supported viewfinder settings

Fetching caps from video source might take sometime and hang ui thread.
Currently the caps are fetched when the camera gets ready which produces a hang.

Proposed a fix to postpone fetching caps when requested and not when camera loaded.

Task-number: QTBUG-67920
Change-Id: I7734ef96c98b2c425714eacc1fd1222fd7ee5c44
Reviewed-by: Christian Stromme <christian.stromme@qt.io>