src/plugins/gstreamer/camerabin/camerabinsession.h
@@ -203,7 +203,6 @@ private:
     bool setupCameraBin();
     void setAudioCaptureCaps();
     GstCaps *supportedCaps(QCamera::CaptureModes mode) const;
-    void updateSupportedViewfinderSettings();
     static void updateBusyStatus(GObject *o, GParamSpec *p, gpointer d);
     static void updateReadyForCapture(GObject *o, GParamSpec *p, gpointer d);
 
@@ -236,7 +235,7 @@ private:
     QGstreamerElementFactory *m_videoInputFactory;
     QObject *m_viewfinder;
     QGstreamerVideoRendererInterface *m_viewfinderInterface;
-    QList<QCameraViewfinderSettings> m_supportedViewfinderSettings;
+    mutable QList<QCameraViewfinderSettings> m_supportedViewfinderSettings;
     QCameraViewfinderSettings m_viewfinderSettings;
     QCameraViewfinderSettings m_actualViewfinderSettings;
 
